Json Codec Support (#49)
Signed-off-by: jasperpotts <jasperpotts@users.noreply.github.com>
Co-authored-by: jasperpotts <jasperpotts@users.noreply.github.com>