@@ -2,9 +2,9 @@ package com.hedera.pbj.runtime;
 
 import com.hedera.pbj.runtime.io.buffer.BufferedData;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
-import com.hedera.pbj.runtime.io.buffer.RandomAccessData;
 
 import java.nio.ByteBuffer;
+import java.nio.CharBuffer;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -19,7 +19,10 @@ import java.util.List;
 public final class ProtoTestTools {
 
     /** Size for reusable test buffers */
-    private static final int BUFFER_SIZE = 24*1024*1024;
+    private static final int BUFFER_SIZE = 1024*1024;
+
+    /** Size for reusable test char buffers */
+    private static final int CHAR_BUFFER_SIZE = 1024*1024;
 
     /** Instance should never be created */
     private ProtoTestTools() {}
@@ -30,6 +33,18 @@ public final class ProtoTestTools {
     /** Thread local set of reusable buffers, second buffer for each thread */
     private static final ThreadLocal<BufferedData> THREAD_LOCAL_BUFFERS_2 =
             ThreadLocal.withInitial(() -> BufferedData.allocate(BUFFER_SIZE));
+
+    /** Thread local set of reusable buffers */
+    private static final ThreadLocal<ByteBuffer> THREAD_LOCAL_BYTE_BUFFERS =
+            ThreadLocal.withInitial(() -> ByteBuffer.allocate(BUFFER_SIZE));
+
+    /** Thread local set of reusable char buffers */
+    private static final ThreadLocal<CharBuffer> THREAD_LOCAL_CHAR_BUFFERS =
+            ThreadLocal.withInitial(() -> CharBuffer.allocate(CHAR_BUFFER_SIZE));
+
+    /** Thread local set of reusable char buffers */
+    private static final ThreadLocal<CharBuffer> THREAD_LOCAL_CHAR_BUFFERS_2 =
+            ThreadLocal.withInitial(() -> CharBuffer.allocate(CHAR_BUFFER_SIZE));
 
     /**
      * Get the thread local instance of DataBuffer, reset and ready to use.
@@ -53,10 +68,6 @@ public final class ProtoTestTools {
         return local;
     }
 
-    /** Thread local set of reusable buffers */
-    private static final ThreadLocal<ByteBuffer> THREAD_LOCAL_BYTE_BUFFERS =
-            ThreadLocal.withInitial(() -> ByteBuffer.allocate(BUFFER_SIZE));
-
     /**
      * Get the thread local instance of ByteBuffer, reset and ready to use.
      *
@@ -64,6 +75,28 @@ public final class ProtoTestTools {
      */
     public static ByteBuffer getThreadLocalByteBuffer() {
         final var local = THREAD_LOCAL_BYTE_BUFFERS.get();
+        local.clear();
+        return local;
+    }
+
+    /**
+     * Get the thread local instance of CharBuffer, reset and ready to use.
+     *
+     * @return a ByteBuffer that can be reused by current thread
+     */
+    public static CharBuffer getThreadLocalCharBuffer() {
+        final var local = THREAD_LOCAL_CHAR_BUFFERS.get();
+        local.clear();
+        return local;
+    }
+
+    /**
+     * Get the thread local instance of CharBuffer, reset and ready to use.
+     *
+     * @return a ByteBuffer that can be reused by current thread
+     */
+    public static CharBuffer getThreadLocalCharBuffer2() {
+        final var local = THREAD_LOCAL_CHAR_BUFFERS_2.get();
         local.clear();
         return local;
     }
@@ -84,19 +117,25 @@ public final class ProtoTestTools {
 
     /**
      * Util method to create a list of lists of objects. Given a list of test cases it creates an empty list and then a
-     * sub list of first 3 elements of input {code list}, then the complete input {@code list}. So result is a list of
-     * 3 lists.
+     * splits the rest into sub-lists of length max 5.
+     * <p>
+     *     This was changed has it is way faster for tests to do many small chunks than a few huge objects.
+     * </p>
      *
      * @param list Input list
      * @return list of lists derived from input list
      * @param <T> the type for lists
      */
     public static <T> List<List<T>> generateListArguments(final List<T> list) {
-        return List.of(
-            Collections.emptyList(),
-            list.subList(0,Math.min(3, list.size())),
-            list
-        );
+        ArrayList<List<T>> outputList = new ArrayList<>((list.size()/5)+1);
+        outputList.add(Collections.emptyList());
+        int i = 0;
+        while (i < list.size()) {
+            final int itemsToUse = Math.min(5, list.size()-i);
+            outputList.add(list.subList(i, i+itemsToUse));
+            i += itemsToUse;
+        }
+        return outputList;
     }
 
     // =================================================================================================================
